Update swagger spec. Create component for checking information about a location area in a given Pokemon game
